# neon

./: .gitignore  Cargo.toml  Makefile
config/: config.toml
crates/neon_core/: Cargo.toml
crates/neon_core/src/: core.rs
crates/neon_event/: Cargo.toml
crates/neon_event/src/: event.rs  event_type.rs  lib.rs
crates/neon_plugin/: Cargo.toml
crates/neon_ui/: Cargo.toml
src/: main.rs
src/app/: app.rs  event.rs  mod.rs  state.rs
src/config/: config.rs  mod.rs  theme.rs
src/ui/: mod.rs  ui.rs
src/ui/editor/: editor.rs
src/ui/file_tree/: file_adapter.rs  file_tree.rs  menu.rs  mod.rs
themes/: apprentice.toml  gruvbox.toml
