[package]
name = "neon"
version = "0.1.0"
authors = ["KamilM1205 <bigprogrammer1205@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log4rs = "1.0.0"
log = "0.4.14"
crossterm = "0.22.1"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
toml = "0.5.8"
serde = "1.0.130"