[package]
name = "neon_core"
version = "0.1.0"
authors = ["KamilM1205 <bigprogrammer1205@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon_ui = { path = "../neon_ui" }
neon_plugin = { path = "../neon_plugin" }
neon_event = { path = "../neon_event" }